criei projeto Lâmpada

--- a/projeto-lampada/index.html
+++ b/projeto-lampada/index.html
@@ -17,6 +17,7 @@
         <div>
             <button id='turnOn'>Ligar</button>
             <button id='turnOff'>Desligar</button>     
+            <button id='turnRec'>Restaurar</button>
         </div>
         
     </main>
